# compute-web-app

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TODO.md
benchmarks/: Readme.md
benchmarks/cpp-httplib/: CMakeLists.txt  client.cpp  httplib.cc  server.cpp
benchmarks/cppzmq/: CMakeLists.txt  client.cpp  server.cpp
benchmarks/poco_cppzmq/: CMakeLists.txt  client.cpp  process.cpp  server.cpp
benchmarks/poco_cppzmq_2/: CMakeLists.txt
benchmarks/poco_cppzmq_2/client/: CMakeLists.txt  client.cpp  client.py  requirements.txt
benchmarks/poco_cppzmq_2/process/: process.h
benchmarks/poco_cppzmq_2/server/: CMakeLists.txt  run_benchmark.py  server.cpp
docs/: class_diagram.plantuml  server_worker_timeline.plantuml  server_worker_timeline_2.plantuml
docs/code_examples/: dataset_0.json  dataset_0.raw  dataset_1.json  dataset_1.raw  example_local.cpp  example_process.cpp  example_remote.cpp  process_definition.json  process_main.cpp  worker_main.cpp
frontend/: .env  .env.production  .gitignore  README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Data.vue  DataAddProcess.vue  DataImage.vue  DataInfo.vue  DataList.vue  DataStatus.vue  DatasetViewer.vue  DatasetsViewer.vue  NavBar.vue  ProcessAction.vue  ProcessList.vue  ProcessStatus.vue  ResultInfo.vue
frontend/src/router/: index.js
frontend/src/views/: DataListView.vue  Home.vue  ProcessListView.vue
openapi/: openapi3.yml
python/: .gitignore  README.md  app.py  cwa_app.py  pytest.ini  requirements.txt
python/api/: __init__.py  data.py  file_utils.py  image_utils.py  process.py  process_action.py  process_definition.py  result.py  write_process.py
python/data/: README.md
python/etc/: gunicorn.py
python/process_definition/: README.md  process_test_0.json  process_test_1.json  process_test_2.json  requirements.txt
python/process_definition/process_test_0/: app.py
python/process_definition/process_test_1/: app.py
python/process_definition/process_test_2/: app.py
python/result/: README.md
python/tests/: common.py  test_api.py  test_post_data.py  test_process.py
src/: CMakeLists.txt
src/data/: CMakeLists.txt  attribute.cpp  attribute.h  data.cpp  data.h  data_aggregator.cpp  data_aggregator.h  data_exception.h  data_supplier.cpp  data_supplier.h  data_supply_state.cpp  data_supply_state.h  dataset.cpp  dataset.h  dataset_aggregator.cpp  dataset_aggregator.h  dataset_aggregator_client.cpp  dataset_aggregator_client.h  dataset_aggregator_client_file.cpp  dataset_aggregator_client_file.h  dataset_aggregator_client_socket.cpp  dataset_aggregator_client_socket.h  dataset_aggregator_server.cpp  dataset_aggregator_server.h  dataset_aggregator_server_file.cpp  dataset_aggregator_server_file.h  dataset_aggregator_server_socket.cpp  dataset_aggregator_server_socket.h  dataset_exchange_file.cpp  dataset_exchange_file.h  dataset_socket_client.cpp  dataset_socket_client.h  dataset_socket_server.cpp  dataset_socket_server.h  dataset_supplier.cpp  dataset_supplier.h  dataset_supplier_client.cpp  dataset_supplier_client.h  dataset_supplier_client_file.cpp  dataset_supplier_client_file.h  (+9 more)
src/data/test/: CMakeLists.txt  data_test_mp_ring_client.cpp  data_test_mp_ring_server.cpp  data_test_mt_ring.cpp  test_mp_ring.cmake  test_mt_ring.cmake
src/log/: CMakeLists.txt  log.cpp  log.h
src/log/plog/Appenders/: CwaConsoleAppender.h
src/log/plog/Formatters/: CwaTxtFormatter.h
src/process/: CMakeLists.txt  data_process.cpp  data_process.h  definition.cpp  definition.h  exception.h  parameter.cpp  parameter.h  variant.cpp  variant.h  worker.cpp  worker.h  worker_multi_process.cpp  worker_multi_process.h  worker_multi_thread.cpp  worker_multi_thread.h
src/process/benchmark/: CMakeLists.txt  benchmark.py  benchmark_main.cpp  benchmark_worker.cpp
src/process/test/: CMakeLists.txt  run_test.sh  test_definition.cpp  test_main.cmake  test_main_app.cpp  test_parameter.cpp  test_variant.cpp  test_worker.cpp  test_worker.h  test_worker_app.cpp
